--- a/main.html
+++ b/main.html
@@ -8,6 +8,16 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<ol type="A">
+		<li data-ns-test="shoppingList">high-quality computer.</li>
+		<li data-ns-test="shoppingList">house</li>
+		<li data-ns-test="shoppingList">car</li>
+	</ol>
+	<ul type="circle">
+		<li data-ns-test="holidayList">Vrindavan</li>
+		<li data-ns-test="holidayList">Dwarka</li>
+		<li data-ns-test="holidayList">Puri</li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
